--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ p {
   transform: scale(1.1);
   box-shadow: 5px 5px grey;
 }
+
 .notepad-icon {
   padding: 35px;
   background-color: #ff518b;
@@ -118,7 +119,7 @@ p {
 }
 .article-details p {
   font-size: 16px;
-  text-align: justify ;
+  text-align: justify;
 }
 .article-btn {
   font-weight: 500;
@@ -129,8 +130,34 @@ p {
   border-radius: 48px;
   padding: 18px 50px;
 }
-.article-img img{
-    width: 430px;
-    height: 490px;
+.article-img img {
+  width: 430px;
+  height: 490px;
 }
 /* Article section end */
+
+/* customer counting section start */
+.customer-counting {
+  position: relative;
+}
+.counting-area {
+  background: linear-gradient(266.96deg, #9895fb 2.05%, #7d79fb 100.29%);
+  height: 290px;
+}
+.counting-area h4,
+p {
+  color: white;
+}
+.counting-area p {
+  font-size: 18px;
+}
+.sponsore-logos {
+  position: absolute;
+  left: 165px;
+  top: 185px;
+  z-index: 1000;
+  height: 185px;
+  background-color: white;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.06);
+  border-radius: 15px;
+}
