--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ p {
 #marketing-section {
   margin-top: 150px;
 }
-.article h1{
+.article h1 {
   font-size: 35px;
 }
 .article p {
@@ -182,6 +182,54 @@ p {
   width: 482px;
   height: 355px;
 }
+/* Marketing section end */
+
+/* Services section start */
+
+#services {
+  margin-top: 100px;
+}
+.text-icon{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-image: linear-gradient(180deg, #ff518b 0%, #eb4b80 100%);
+  box-shadow: 0px 10px 25px rgba(243, 124, 167, 0.4);
+}
+.user-icon{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #C6DA4F 0%, #97C64B 100%);
+}
+.achive-icon{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #51C0FF 0%, #4592D9 100%);
+}
+.verify-icon{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #5177FF 0%, #4E4BEB 100%);
+}
+.tick-icon{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #FFA551 0%, #E66E3B 100%);
+
+}
+.clock-icon{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, #60E796 0%, #47C08D 100%);
+
+}
+
+
 
 @media (max-width: 575) {
   .container {
